duktape-sys/src/ffi.rs

pub type duk_int16_t = i16;
pub type duk_uint32_t = u32;
pub type duk_int32_t = i32;
pub type duk_uint64_t = u64;
pub type duk_int64_t = i64;
pub type duk_uint_least8_t = uint_least8_t;
pub type duk_int_least8_t = int_least8_t;
pub type duk_uint_least16_t = uint_least16_t;
pub type duk_int_least16_t = int_least16_t;
pub type duk_uint_least32_t = uint_least32_t;
pub type duk_int_least32_t = int_least32_t;
pub type duk_uint_least64_t = uint_least64_t;
pub type duk_int_least64_t = int_least64_t;
pub type duk_uint_fast8_t = uint_fast8_t;
pub type duk_int_fast8_t = int_fast8_t;
pub type duk_uint_fast16_t = uint_fast16_t;
pub type duk_int_fast16_t = int_fast16_t;
pub type duk_uint_fast32_t = uint_fast32_t;
pub type duk_int_fast32_t = int_fast32_t;
pub type duk_uint_fast64_t = uint_fast64_t;
pub type duk_int_fast64_t = int_fast64_t;
pub type duk_uintptr_t = usize;
pub type duk_intptr_t = isize;
pub type duk_uintmax_t = uintmax_t;
pub type duk_intmax_t = intmax_t;
pub type duk_size_t = usize;
pub type duk_ptrdiff_t = isize;
pub type duk_int_t = ::std::os::raw::c_int;
pub type duk_uint_t = ::std::os::raw::c_uint;
pub type duk_int_fast_t = duk_int_fast32_t;
pub type duk_uint_fast_t = duk_uint_fast32_t;
pub type duk_small_int_t = ::std::os::raw::c_int;
pub type duk_small_uint_t = ::std::os::raw::c_uint;
pub type duk_small_int_fast_t = duk_int_fast16_t;
pub type duk_small_uint_fast_t = duk_uint_fast16_t;
pub type duk_bool_t = duk_small_int_t;
pub type duk_idx_t = duk_int_t;
pub type duk_uidx_t = duk_uint_t;
pub type duk_uarridx_t = duk_uint_t;
pub type duk_ret_t = duk_small_int_t;
pub type duk_errcode_t = duk_int_t;
pub type duk_codepoint_t = duk_int_t;
pub type duk_ucodepoint_t = duk_uint_t;
pub type duk_float_t = f32;
pub type duk_double_t = f64;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct duk_hthread {
    _unused: [u8; 0],
}
pub type duk_context = duk_hthread;
pub type duk_c_function =
    ::std::option::Option<unsafe extern "C" fn(ctx: *mut duk_context) -> duk_ret_t>;
pub type duk_alloc_function = ::std::option::Option<
    unsafe extern "C" fn(
        udata: *mut ::std::os::raw::c_void,
        size: duk_size_t,
    ) -> *mut ::std::os::raw::c_void,
>;
pub type duk_realloc_function = ::std::option::Option<
    unsafe extern "C" fn(
        udata: *mut ::std::os::raw::c_void,
        ptr: *mut ::std::os::raw::c_void,
        size: duk_size_t,
    ) -> *mut ::std::os::raw::c_void,
>;
pub type duk_free_function = ::std::option::Option<
    unsafe extern "C" fn(udata: *mut ::std::os::raw::c_void, ptr: *mut ::std::os::raw::c_void),
>;
pub type duk_fatal_function = ::std::option::Option<
    unsafe extern "C" fn(udata: *mut ::std::os::raw::c_void, msg: *const ::std::os::raw::c_char),
>;
pub type duk_decode_char_function = ::std::option::Option<
    unsafe extern "C" fn(udata: *mut ::std::os::raw::c_void, codepoint: duk_codepoint_t),
>;
pub type duk_map_char_function = ::std::option::Option<
    unsafe extern "C" fn(
        udata: *mut ::std::os::raw::c_void,
        codepoint: duk_codepoint_t,
    ) -> duk_codepoint_t,
>;
pub type duk_safe_call_function = ::std::option::Option<
    unsafe extern "C" fn(ctx: *mut duk_context, udata: *mut ::std::os::raw::c_void) -> duk_ret_t,
>;
pub type duk_debug_read_function = ::std::option::Option<
    unsafe extern "C" fn(
        udata: *mut ::std::os::raw::c_void,
        buffer: *mut ::std::os::raw::c_char,
        length: duk_size_t,
    ) -> duk_size_t,
>;
pub type duk_debug_write_function = ::std::option::Option<
    unsafe extern "C" fn(
        udata: *mut ::std::os::raw::c_void,
        buffer: *const ::std::os::raw::c_char,
        length: duk_size_t,
    ) -> duk_size_t,
>;
pub type duk_debug_peek_function =
    ::std::option::Option<unsafe extern "C" fn(udata: *mut ::std::os::raw::c_void) -> duk_size_t>;
pub type duk_debug_read_flush_function =
    ::std::option::Option<unsafe extern "C" fn(udata: *mut ::std::os::raw::c_void)>;
pub type duk_debug_write_flush_function =
    ::std::option::Option<unsafe extern "C" fn(udata: *mut ::std::os::raw::c_void)>;
pub type duk_debug_request_function = ::std::option::Option<
    unsafe extern "C" fn(
        ctx: *mut duk_context,
        udata: *mut ::std::os::raw::c_void,
        nvalues: duk_idx_t,
    ) -> duk_idx_t,
>;
pub type duk_debug_detached_function = ::std::option::Option<
    unsafe extern "C" fn(ctx: *mut duk_context, udata: *mut ::std::os::raw::c_void),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct duk_memory_functions {
    pub alloc_func: duk_alloc_function,
    pub realloc_func: duk_realloc_function,
    pub free_func: duk_free_function,
    pub udata: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout_duk_memory_functions() {
    assert_eq!(
        ::std::mem::size_of::<duk_memory_functions>(),
        32usize,
        concat!("Size of: ", stringify!(duk_memory_functions))
    );
    assert_eq!(
        ::std::mem::align_of::<duk_memory_functions>(),
        8usize,
        concat!("Alignment of ", stringify!(duk_memory_functions))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<duk_memory_functions>())).alloc_func as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(duk_memory_functions),
            "::",
            stringify!(alloc_func)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<duk_memory_functions>())).realloc_func as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(duk_memory_functions),
            "::",
            stringify!(realloc_func)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<duk_memory_functions>())).free_func as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(duk_memory_functions),
            "::",
            stringify!(free_func)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<duk_memory_functions>())).udata as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(duk_memory_functions),
            "::",
            stringify!(udata)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct duk_function_list_entry {
    pub key: *const ::std::os::raw::c_char,
    pub value: duk_c_function,
    pub nargs: duk_idx_t,
}
#[test]
fn bindgen_test_layout_duk_function_list_entry() {
    assert_eq!(
        ::std::mem::size_of::<duk_function_list_entry>(),
        24usize,
        concat!("Size of: ", stringify!(duk_function_list_entry))
    );
    assert_eq!(
        ::std::mem::align_of::<duk_function_list_entry>(),
        8usize,
        concat!("Alignment of ", stringify!(duk_function_list_entry))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<duk_function_list_entry>())).key as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(duk_function_list_entry),
            "::",
            stringify!(key)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<duk_function_list_entry>())).value as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(duk_function_list_entry),
            "::",
            stringify!(value)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<duk_function_list_entry>())).nargs as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(duk_function_list_entry),
            "::",
            stringify!(nargs)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct duk_number_list_entry {
    pub key: *const ::std::os::raw::c_char,
    pub value: duk_double_t,
}
#[test]
fn bindgen_test_layout_duk_number_list_entry() {
    assert_eq!(
        ::std::mem::size_of::<duk_number_list_entry>(),
        16usize,
        concat!("Size of: ", stringify!(duk_number_list_entry))
    );
    assert_eq!(
        ::std::mem::align_of::<duk_number_list_entry>(),
        8usize,
        concat!("Alignment of ", stringify!(duk_number_list_entry))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<duk_number_list_entry>())).key as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(duk_number_list_entry),
            "::",
            stringify!(key)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<duk_number_list_entry>())).value as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(duk_number_list_entry),
            "::",
            stringify!(value)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct duk_time_components {
    pub year: duk_uint_t,
    pub month: duk_uint_t,
    pub day: duk_uint_t,
    pub hour: duk_uint_t,
    pub minute: duk_uint_t,
    pub second: duk_uint_t,
    pub weekday: duk_uint_t,
    pub millisecond: duk_double_t,
}
#[test]
fn bindgen_test_layout_duk_time_components() {
    assert_eq!(
        ::std::mem::size_of::<duk_time_components>(),
        40usize,
        concat!("Size of: ", stringify!(duk_time_components))
    );
    assert_eq!(
        ::std::mem::align_of::<duk_time_components>(),
        8usize,
        concat!("Alignment of ", stringify!(duk_time_components))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<duk_time_components>())).year as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(duk_time_components),
            "::",
            stringify!(year)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<duk_time_components>())).month as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(duk_time_components),
            "::",
            stringify!(month)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<duk_time_components>())).day as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(duk_time_components),
            "::",
            stringify!(day)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<duk_time_components>())).hour as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(duk_time_components),
            "::",
            stringify!(hour)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<duk_time_components>())).minute as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(duk_time_components),
            "::",
            stringify!(minute)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<duk_time_components>())).second as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(duk_time_components),
            "::",
            stringify!(second)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<duk_time_components>())).weekday as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(duk_time_components),
            "::",
            stringify!(weekday)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<duk_time_components>())).millisecond as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(duk_time_components),
            "::",
            stringify!(millisecond)
        )
    );
}
